...
                                text: "Start by searching your favorite books and marking them as favorites.",
                                localizationComment: "A tooltip that appears on the first launch of the app, explaining how to use search",
                                color: .favorites
                            )
                        }
                            .buttonStyle(.plain)
                            .accessibilityIdentifier("SearchOnboardingLabel")
                        Spacer()
                    }
                }
                if viewModel.searchOnboardingShown
                        && !viewModel.recommendationsOnboardingShown {
                    VStack {
...
                                text: "Then check your recommendations!",
                                localizationComment: "A tooltip that appears on the first launch of the app, explaining how to check recommendations",
                                color: .recommendations
                            )
                        }
                            .buttonStyle(.plain)
                            .accessibilityIdentifier("RecommendationsOnboardingLabel")
                    }
                }
            }
                .animation(.default, value: viewModel.searchOnboardingShown)
                .animation(.default, value: viewModel.recommendationsOnboardingShown)
                .sheet(item: $selectedBook) {
...
