...
    // MARK: View protocol properties

    var body: some View {
        VStack {
            HStack {
                Spacer()
                Button("Close") { dismiss() }
                    .padding()
            }
            ScrollView {
                if let image = viewModel.image {
                    Image(decorative: image, scale: 1.0)
                        .padding(.bottom)
...
